# nostr-cxx-bot

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  compile_flags.txt  main.cxx
.github/workflows/: docker.yml
